add refresh tokens functionality

--- a/public/sign-in.html
+++ b/public/sign-in.html
@@ -1,6 +1,6 @@
 <form action="/sign-in/" method="POST">
   <div class="form-group">
-    <input type="text" name="username" class="form-control" id="username" placeholder="username"
+    <input type="text" name="email" class="form-control" id="email" placeholder="email"
       style="border:solid black 1px;box-shadow:inset;">
     <input type="password" name="password" class="form-control" id="password" placeholder="password"
       style=" border:solid black 1px;box-shadow:inset;">
