add user handlers and middleware

--- a/public/register.html
+++ b/public/register.html
@@ -1,4 +1,4 @@
-<form action="/register" method="POST">
+<form action="/register/" method="POST">
   <div class="form-group">
     <input type="text" name="username" class="form-control" id="username" placeholder="Username"
       style="border:solid black 1px;box-shadow:inset;" required>
@@ -8,9 +8,9 @@
 
     <input type="text" name="last_name" class="form-control" id="last_name" placeholder="Last Name"
       style="border:solid black 1px;box-shadow:inset;" required>
-
+<!--
     <input type="date" name="date_of_birth" class="form-control" id="date_of_birth"
-      style="border:solid black 1px;box-shadow:inset;" required>
+      style="border:solid black 1px;box-shadow:inset;" required> -->
 
     <input type="email" name="email" class="form-control" id="email" placeholder="E-mail"
       style="border:solid black 1px;box-shadow:inset;" required>
