--- a/public/login.html
+++ b/public/login.html
@@ -1,4 +1,4 @@
-<form action="/login/" method="POST">
+<form action="/api/auth/login" method="POST">
   <div class="form-group">
     <input type="text" name="email" class="form-control" id="email" placeholder="email"
       style="border:solid black 1px;box-shadow:inset;">
