--- a/public/login.html
+++ b/public/login.html
@@ -7,6 +7,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-    <input type="submit" text="submit" class="btn btn-default" />
+    <button type="submit" class="btn btn-default">Submit<button>/>
   </div>
 </form>
