--- a/public/register.html
+++ b/public/register.html
@@ -32,7 +32,7 @@
 
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <input type="submit" value="Submit" class="btn btn-default" />
+      <button type="submit" value="Submit" class="btn btn-default">Submit</button/>
     </div>
   </form>
 </body>
