--- a/public/login.html
+++ b/public/login.html
@@ -1,4 +1,4 @@
-<form action="/api/auth/login" method="POST">
+<form action="/api/v1/auth/login" method="POST">
   <div class="form-group">
     <input type="text" name="email" class="form-control" id="email" placeholder="email"
       style="border:solid black 1px;box-shadow:inset;">
@@ -7,6 +7,6 @@
   </div>
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-    <button type="submit" class="btn btn-default">Submit<button>/>
+    <button type="submit" class="btn btn-default">Submit</button>
   </div>
 </form>
