--- a/public/register.html
+++ b/public/register.html
@@ -6,7 +6,7 @@
   <title>Register Form</title>
 </head>
 <body>
-  <form method="POST" action="http://localhost:8080/api/auth/register">
+  <form method="POST" action="/api/v1/auth/register">
     <div class="form-group">
       <input type="text" name="username" class="form-control" id="username" placeholder="Username"
         style="border:solid black 1px;box-shadow:inset;" required>
@@ -32,7 +32,8 @@
 
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <button type="submit" value="Submit" class="btn btn-default">Submit</button/>
+      <button type="submit" value="Submit" class="btn btn-default">Submit
+      </button>
     </div>
   </form>
 </body>
